// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManualPricingColumnCellRenderer /> should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ManualPricingCellPresenter
    cancelEditingManualPrice={[Function]}
    cellData={null}
    isEditing={false}
    manualPriceLocked={false}
    rowData={
        Object {
            "listedPrice": 12,
          }
    }
    setEditingManualPrice={[Function]}
    setManualPrice={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <styled.p
          color="#38A9DB"
          onClick={[Function]}
          opacity={1}
          size={14}
>
          SET PRICE
</styled.p>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "SET PRICE",
          "color": "#38A9DB",
          "onClick": [Function],
          "opacity": 1,
          "size": 14,
        },
        "ref": null,
        "rendered": "SET PRICE",
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <styled.p
            color="#38A9DB"
            onClick={[Function]}
            opacity={1}
            size={14}
>
            SET PRICE
</styled.p>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "SET PRICE",
            "color": "#38A9DB",
            "onClick": [Function],
            "opacity": 1,
            "size": 14,
          },
          "ref": null,
          "rendered": "SET PRICE",
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when isEditing is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ManualPricingCellPresenter
    cancelEditingManualPrice={[Function]}
    cellData={null}
    isEditing={true}
    manualPriceLocked={false}
    rowData={
        Object {
            "listedPrice": 12,
          }
    }
    setEditingManualPrice={[Function]}
    setManualPrice={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <styled.input
          onChange={[Function]}
          pattern="[0-9]"
          placeholder="$12.00"
          type="text"
          value=""
/>,
        <styled.button
          onClick={[Function]}
>
          Set Price
</styled.button>,
        <ClearIcon
          fill="#000"
          height={16}
          onClick={[Function]}
          styles={
                    Object {
                              "cursor": "pointer",
                              "marginLeft": 7,
                            }
          }
          width={16}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onChange": [Function],
          "pattern": "[0-9]",
          "placeholder": "$12.00",
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Set Price",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Set Price",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#000",
          "height": 16,
          "onClick": [Function],
          "styles": Object {
            "cursor": "pointer",
            "marginLeft": 7,
          },
          "width": 16,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <styled.input
            onChange={[Function]}
            pattern="[0-9]"
            placeholder="$12.00"
            type="text"
            value=""
/>,
          <styled.button
            onClick={[Function]}
>
            Set Price
</styled.button>,
          <ClearIcon
            fill="#000"
            height={16}
            onClick={[Function]}
            styles={
                        Object {
                                    "cursor": "pointer",
                                    "marginLeft": 7,
                                  }
            }
            width={16}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onChange": [Function],
            "pattern": "[0-9]",
            "placeholder": "$12.00",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Set Price",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Set Price",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#000",
            "height": 16,
            "onClick": [Function],
            "styles": Object {
              "cursor": "pointer",
              "marginLeft": 7,
            },
            "width": 16,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when manualPriceLocked is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ManualPricingCellPresenter
    cancelEditingManualPrice={[Function]}
    cellData={null}
    isEditing={false}
    manualPriceLocked={true}
    rowData={
        Object {
            "listedPrice": 12,
          }
    }
    setEditingManualPrice={[Function]}
    setManualPrice={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <styled.p
          color="#38A9DB"
          onClick={[Function]}
          opacity={0.5}
          size={14}
>
          SET PRICE
</styled.p>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "SET PRICE",
          "color": "#38A9DB",
          "onClick": [Function],
          "opacity": 0.5,
          "size": 14,
        },
        "ref": null,
        "rendered": "SET PRICE",
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <styled.p
            color="#38A9DB"
            onClick={[Function]}
            opacity={0.5}
            size={14}
>
            SET PRICE
</styled.p>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "SET PRICE",
            "color": "#38A9DB",
            "onClick": [Function],
            "opacity": 0.5,
            "size": 14,
          },
          "ref": null,
          "rendered": "SET PRICE",
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when the cellData has a value 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ManualPricingCellPresenter
    cancelEditingManualPrice={[Function]}
    cellData={12}
    isEditing={false}
    manualPriceLocked={false}
    rowData={
        Object {
            "listedPrice": 12,
          }
    }
    setEditingManualPrice={[Function]}
    setManualPrice={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <styled.p
          color="#38A9DB"
          onClick={[Function]}
          opacity={1}
          size={14}
>
          EDIT PRICE
</styled.p>,
        <styled.p
          color="#070707"
          marginLeft="1rem"
          size={14}
>
          $12.00
</styled.p>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "EDIT PRICE",
          "color": "#38A9DB",
          "onClick": [Function],
          "opacity": 1,
          "size": 14,
        },
        "ref": null,
        "rendered": "EDIT PRICE",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "$12.00",
          "color": "#070707",
          "marginLeft": "1rem",
          "size": 14,
        },
        "ref": null,
        "rendered": "$12.00",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <styled.p
            color="#38A9DB"
            onClick={[Function]}
            opacity={1}
            size={14}
>
            EDIT PRICE
</styled.p>,
          <styled.p
            color="#070707"
            marginLeft="1rem"
            size={14}
>
            $12.00
</styled.p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "EDIT PRICE",
            "color": "#38A9DB",
            "onClick": [Function],
            "opacity": 1,
            "size": 14,
          },
          "ref": null,
          "rendered": "EDIT PRICE",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "$12.00",
            "color": "#070707",
            "marginLeft": "1rem",
            "size": 14,
          },
          "ref": null,
          "rendered": "$12.00",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
